--- a/WeekendTimetable/src/main/resources/application.properties
+++ b/WeekendTimetable/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 dataSource.driverClassName=org.h2.Driver
-dataSource.url=jdbc:h2:~/spring_entity_sceleton
+dataSource.url=jdbc:h2:~/weekend_timetable
 dataSource.username=alex
 dataSource.password=12345
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 
 #dataSource.driverClassName=org.postgresql.Driver
 #dataSource.url=jdbc:postgresql://localhost:5432/spring-pojo
