--- a/WeekendTimetable/pom.xml
+++ b/WeekendTimetable/pom.xml
@@ -153,5 +153,14 @@
     	<artifactId>hibernate-jpa-2.0-api</artifactId>
     	<version>1.0.1.Final</version>
 	</dependency>
+	
+	<!-- MOCKITO -->
+	<dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.10.19</version>
+    	<scope>test</scope>
+	</dependency>
+	
   </dependencies>
 </project>
